samples/_failures_safe/1761451683_c1eaeb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b81861e.c: In function ‘main’:
./samples/SAFE/__tmp_9b81861e.c:176:9: error: expected declaration or statement at end of input
  176 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_9b81861e.c:176:9: error: expected declaration or statement at end of input
